Added loading screen

--- a/1v1.lol.html
+++ b/1v1.lol.html
@@ -1,57 +1,168 @@
-<!-- Ultimate Game Stash file--> 
-<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1v1.lol</title>
+    <style>
+        /* Loading Screen Styles */
+        #loadingScreen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.95);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
 
+        .loading-logo {
+            width: 200px;
+            height: 200px;
+            margin-bottom: 30px;
+            border-radius: 20px;
+            border: 3px solid #00f;
+            box-shadow: 0 0 30px rgba(0, 0, 255, 0.7);
+            animation: logoPulse 2s ease-in-out infinite alternate;
+        }
 
-</style></head><body dir="ltr"><script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/UnityProgress.js"></script><script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/2.7.js"></script><script type="text/javascript">
-      var gameInstance;
+        @keyframes logoPulse {
+            from {
+                transform: scale(1);
+                box-shadow: 0 0 20px rgba(0, 0, 255, 0.5);
+            }
+            to {
+                transform: scale(1.1);
+                box-shadow: 0 0 40px rgba(0, 0, 255, 0.9);
+            }
+        }
 
-      window.onload = function () {
-        gameInstance = UnityLoader.instantiate("gameContainer", "https://cdn.jsdelivr.net/gh/n-101-1/1@main/2.7.json", {
-          onProgress: UnityProgress,
-          Module: {
-            onRuntimeInitialized: function () {
-              UnityProgress(gameInstance, "complete");
-            },
-          },
-        });
-      };
-    </script>
-    <div class="webgl-content">
-      <div id="gameContainer" style="width: 100%; height: 100%; margin: 0px; padding: 0px; border: 0px; position: relative; background: rgb(0, 0, 0);"><canvas id="#canvas" style="width: 100%; height: 100%; cursor: default;" width="1018" height="926"></canvas><div class="logo Dark" style="display: none;"></div><div class="progress Dark" style="display: none;"><div class="empty" style="width: 0%;"></div><div class="full" style="width: 100%;"></div></div></div>
+        .loading-text {
+            font-size: 48px;
+            font-weight: bold;
+            text-transform: uppercase;
+            animation: neonGlowBlue 2s ease-in-out infinite alternate;
+            color: #00f;
+            text-align: center;
+            font-family: 'Arial Black', sans-serif;
+            margin-bottom: 20px;
+        }
+
+        @keyframes neonGlowBlue {
+            from {
+                text-shadow: 0 0 5px #fff, 0 0 15px #00f, 0 0 30px #00f, 0 0 60px #00f;
+            }
+            to {
+                text-shadow: 0 0 10px #fff, 0 0 20px #00f, 0 0 40px #00f, 0 0 80px #00f;
+            }
+        }
+
+        .loading-spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid rgba(0, 0, 255, 0.3);
+            border-top: 5px solid #00f;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Unity Game Container */
+        #unityGameContent {
+            display: none;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            background: black;
+            overflow: hidden;
+        }
+    </style>
+</head>
+<body>
+    <!-- Loading Screen -->
+    <div id="loadingScreen">
+        <img src="https://gcdnb.pbrd.co/images/1cFGsWokSVvb.jpg?o=1" alt="Free Unblocked Games Logo" class="loading-logo">
+        <div class="loading-text">Loading Game...</div>
+        <div class="loading-spinner"></div>
     </div>
-    <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firebase-app.js"></script>
 
-    <!-- Add Firebase products that you want to use -->
-    <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firebase-auth.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firebase-firestore.js"></script>
+    <!-- Unity Game Content -->
+    <div id="unityGameContent">
+        <!-- Ultimate Game Stash file-->
+        <!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
 
-    <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firebase.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1login.js?v=2"></script>
-    <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firestore.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/UnityProgress.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/2.7.js"></script>
+        <script type="text/javascript">
+            var gameInstance;
+
+            window.onload = function () {
+                gameInstance = UnityLoader.instantiate("gameContainer", "https://cdn.jsdelivr.net/gh/n-101-1/1@main/2.7.json", {
+                    onProgress: UnityProgress,
+                    Module: {
+                        onRuntimeInitialized: function () {
+                            UnityProgress(gameInstance, "complete");
+                        },
+                    },
+                });
+            };
+        </script>
+        <div class="webgl-content">
+            <div id="gameContainer" style="width: 100%; height: 100%; margin: 0px; padding: 0px; border: 0px; position: relative; background: rgb(0, 0, 0);">
+                <canvas id="#canvas" style="width: 100%; height: 100%; cursor: default;" width="1018" height="926"></canvas>
+                <div class="logo Dark" style="display: none;"></div>
+                <div class="progress Dark" style="display: none;">
+                    <div class="empty" style="width: 0%;"></div>
+                    <div class="full" style="width: 100%;"></div>
+                </div>
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firebase-app.js"></script>
+
+        <!-- Add Firebase products that you want to use -->
+        <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firebase-auth.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firebase-firestore.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firebase.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1login.js?v=2"></script>
+        <script src="https://cdn.jsdelivr.net/gh/n-101-1/1@main/1firestore.js"></script>
+
+        <script>
+            initializeFireBase();
+
+            function showAds() {
+                console.log("show ads");
+            }
+            function requestNewAd() {
+                // Show video ad
+                unityAdFinishedCallback();
+            }
+            function unityAdFinishedCallback() {
+                try {
+                    if (gameInstance) gameInstance.SendMessage("AdsManager", "OnWebCallback");
+                } catch (error) {
+                    console.log(error);
+                }
+            }
+        </script>
+    </div>
 
     <script>
-      initializeFireBase();
-
-      function showAds() {
-        console.log("show ads");
-      }
-      function requestNewAd() {
-        // Show video ad
-        unityAdFinishedCallback();
-      }
-      function unityAdFinishedCallback() {
-        try {
-          if (gameInstance) gameInstance.SendMessage("AdsManager", "OnWebCallback");
-        } catch (error) {
-          console.log(error);
-        }
-      }
+        // Show loading screen for 3 seconds, then show Unity game
+        setTimeout(function() {
+            document.getElementById('loadingScreen').style.display = 'none';
+            document.getElementById('unityGameContent').style.display = 'block';
+        }, 3000); // 3 second loading screen
     </script>
-  
-
-
-
-
-
-
-</script><script src="blob:https://gotlgsogl-opensocial.googleusercontent.com/43fddd1c-53cc-4d6d-88c5-93762d972e03" id="a96bf7f9ec45ce9224c9b5b9b42b17b2"></script></body></html>
+</body>
+</html>
