--- a/agar.io.html
+++ b/agar.io.html
@@ -1,28 +1,124 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </title>agar.io</title>
+    <style>
+        /* Loading Screen Styles */
+        #loadingScreen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.95);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
 
-<html>
- <head>
- <script src='https://cdn.jsdelivr.net/gh/234sd4w5w45wers5tr-645758574456456/436874@80f8732e80020f5e1985fc807267ed0637e230a7/jquery-latest.min.js'></script> 
+        .loading-logo {
+            width: 200px;
+            height: 200px;
+            margin-bottom: 30px;
+            border-radius: 20px;
+            border: 3px solid #00f;
+            box-shadow: 0 0 30px rgba(0, 0, 255, 0.7);
+            animation: logoPulse 2s ease-in-out infinite alternate;
+        }
 
- <script src='https://cdn.jsdelivr.net/gh/234sd4w5w45wers5tr-645758574456456/436874@80f8732e80020f5e1985fc807267ed0637e230a7/etc.js'></script> 
- <script src="https://cdn.jsdelivr.net/gh/234sd4w5w45wers5tr-645758574456456/436874@80f8732e80020f5e1985fc807267ed0637e230a7/circle-game.js"></script> 
- <script type='text/javascript'>
-  $(document).ready(function() {
-    if(isCanvasSupported())
-      cg.init()
-    else
-      $(document.body).html("<style type='text/css'>p {text-align: center} body {padding: 10px}</style><p>You browser does not support HTML5, which is required to run this game.</p><p>I recommend Google Chrome <br /><a href='http://www.google.com/chrome'><img src='' /></a></p>")
-  })
-</script> 
- <style type='text/css'>
-body {
-  margin: 0;
-  padding: 0;
-}
-canvas {
-  background-color: black;
-}
-</style> 
-  
+        @keyframes logoPulse {
+            from {
+                transform: scale(1);
+                box-shadow: 0 0 20px rgba(0, 0, 255, 0.5);
+            }
+            to {
+                transform: scale(1.1);
+                box-shadow: 0 0 40px rgba(0, 0, 255, 0.9);
+            }
+        }
+
+        .loading-text {
+            font-size: 48px;
+            font-weight: bold;
+            text-transform: uppercase;
+            animation: neonGlowBlue 2s ease-in-out infinite alternate;
+            color: #00f;
+            text-align: center;
+            font-family: 'Arial Black', sans-serif;
+            margin-bottom: 20px;
+        }
+
+        @keyframes neonGlowBlue {
+            from {
+                text-shadow: 0 0 5px #fff, 0 0 15px #00f, 0 0 30px #00f, 0 0 60px #00f;
+            }
+            to {
+                text-shadow: 0 0 10px #fff, 0 0 20px #00f, 0 0 40px #00f, 0 0 80px #00f;
+            }
+        }
+
+        .loading-spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid rgba(0, 0, 255, 0.3);
+            border-top: 5px solid #00f;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Game Content */
+        #gameContent {
+            display: none;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        canvas {
+            background-color: black;
+        }
+    </style>
 </head>
-   <body>
-<canvas></canvas>
+<body>
+    <!-- Loading Screen -->
+    <div id="loadingScreen">
+        <img src="https://gcdnb.pbrd.co/images/1cFGsWokSVvb.jpg?o=1" alt="Free Unblocked Games Logo" class="loading-logo">
+        <div class="loading-text">Loading Game...</div>
+        <div class="loading-spinner"></div>
+    </div>
+
+    <!-- Game Content -->
+    <div id="gameContent">
+        <script src='https://cdn.jsdelivr.net/gh/234sd4w5w45wers5tr-645758574456456/436874@80f8732e80020f5e1985fc807267ed0637e230a7/jquery-latest.min.js'></script> 
+        <script src='https://cdn.jsdelivr.net/gh/234sd4w5w45wers5tr-645758574456456/436874@80f8732e80020f5e1985fc807267ed0637e230a7/etc.js'></script> 
+        <script src="https://cdn.jsdelivr.net/gh/234sd4w5w45wers5tr-645758574456456/436874@80f8732e80020f5e1985fc807267ed0637e230a7/circle-game.js"></script> 
+        <script type='text/javascript'>
+            $(document).ready(function() {
+                if(isCanvasSupported())
+                    cg.init()
+                else
+                    $(document.body).html("<style type='text/css'>p {text-align: center} body {padding: 10px}</style><p>You browser does not support HTML5, which is required to run this game.</p><p>I recommend Google Chrome <br /><a href='http://www.google.com/chrome'><img src='' /></a></p>")
+            })
+        </script>
+        <canvas></canvas>
+    </div>
+
+    <script>
+        // Show loading screen for 3 seconds, then show game content
+        setTimeout(function() {
+            document.getElementById('loadingScreen').style.display = 'none';
+            document.getElementById('gameContent').style.display = 'block';
+        }, 3000); // 3 second loading screen
+    </script>
+</body>
+</html>
