fixed stuff and added stuff

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Put your HTML text here<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -557,7 +557,7 @@
         <div class="button-container">
             <button class="btn" onclick="openContactUs()">Contact Us</button>
             <button class="btn" onclick="openChatRoom()">Chat Room</button>
-            <button class="btn" onclick="openForm()">Form</button>
+            <button class="btn" onclick="openForm()">Request Games</button>
             <button class="btn" onclick="window.open('https://discord.gg/xFMpuKBFr8', '_blank')">Join Our Discord</button>
         </div>
         
@@ -586,7 +586,7 @@
             <button onclick="playGame('https://educationalgameds.github.io/drivemad')">Play</button>
         </div>
         <div class="card" data-title="Boxing Random">
-            <img src="https://play-lh.googleusercontent.com/ZuMoNX6xiIBRwdtSL-FN0xCdXyahk8SRaPZ5_4HzkdQEp2Tm_GAsha9OcsRoSDgSw8Y" alt="Boxing Random">
+            <img src="https://image.winudf.com/v2/image1/Y29tLnJobS5ib3hpbmdyYW5kb21faWNvbl8xNjcwNzY1OTYzXzA3MQ/icon.png?w=186&fakeurl=1" alt="Boxing Random">
             <h2>Boxing Random</h2>
             <button onclick="playGame('https://educationalgameds.github.io/boxingrandom')">Play</button>
         </div>
@@ -614,6 +614,16 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQITXq6rKQeKZHso_AvjIEKE2YT02fY-cCELA&s" alt="Coreball">
             <h2>Coreball</h2>
             <button onclick="playGame('https://educationalgameds.github.io/coreball')">Play</button>
+        </div>
+        <div class="card" data-title="Agar.io">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Agar.io_Logo.png" alt="Agar.io">
+            <h2>Agar.io</h2>
+            <button onclick="playGame('https://educationalgameds.github.io/agar.io')">Play</button>
+        </div>
+        <div class="card" data-title="Aqua Park">
+            <img src="https://play-lh.googleusercontent.com/u1Z-wRullWJBvInhY4gdFxg_Q8Pz6clUQd7thoQNQNHQ1ghNeUf-lsJandlp1vFKhBk" alt="Aqua Park">
+            <h2>Aqua Park</h2>
+            <button onclick="playGame('https://educationalgameds.github.io/aquapark')">Play</button>
         </div>
     </div>
 
