fixed stupid angry birds

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
     
     <div class="card-container" id="cardContainer">
         <div class="card" data-title="Angry Birds">
-            <img src="https://static.wikia.nocookie.net/angrybirds/images/7/70/AngryBirds_Classic_GameIcon_Vector_2.png/revision/latest/scale-to-width-down/250" alt="Angry Birds">
+            <img src="https://cdn.jsdelivr.net/gh/gn-math/covers@main/63.png" alt="Angry Birds">
             <h2>Angry Birds</h2>
             <button onclick="playGame('https://educationalgameds.github.io/angrybirds')">Play</button>
         </div>
